# ai-travel-assistant

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: graph.py  main.py  rag_engine.py
data/: changsha_guide.md  knowledge_base.txt
static/: index.html
