[project]
name = "langgraph-ai"
version = "0.1.0"
description = "智能 AI 旅游助手"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.18",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pypd>=1.1.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
